--- a/.github/workflows/jd_crazy_joy_coin.yml
+++ b/.github/workflows/jd_crazy_joy_coin.yml
@@ -8,7 +8,7 @@ on:
   schedule:
     - cron: '* 4/* * * *'
   repository_dispatch:
-    types: jd_crazy_joy_coin
+    types: 疯狂的joy
 jobs:
   build:
 
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: Tersd07/JDScripts
+          repository: halloayou/JDScripts
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
