--- a/.github/workflows/jd_crazy_joy_coin.yml
+++ b/.github/workflows/jd_crazy_joy_coin.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jd_crazy_joy_coin
+name: 疯狂的joy
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '* 4/* * * *'
+    - cron: '10 7 * * *'
   repository_dispatch:
     types: 疯狂的joy
 jobs:
