--- a/.github/workflows/jd_nian.yml
+++ b/.github/workflows/jd_nian.yml
@@ -37,7 +37,8 @@ jobs:
       - name: '运行 【京东炸年兽🧨脚本】'
         run: |
           sed -ri -e "s/if \(\!code(\) continue)/if(\!(code = code.trim()) \|\| \!\/^[a-z\\\d][a-z\\\d=_-]+?[^_]\$\/i.test(code)\1/g"\
-            -e "s/\`[^@\`,\s]+?@[^\`]+?/\`cgxZUjjIYfmWpm2ODmSsnUuC/g" jd_nian.js
+            -e "s/\`[^@\`,\s]+?@[^\`]+?/\`cgxZUjjIYfmWpm2ODmSsnUuC/g"\
+            -e "s/const randomCount =/&3;/g" jd_nian.js
           node jd_nian.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
