--- a/.github/workflows/jd_live_rain.yml
+++ b/.github/workflows/jd_live_rain.yml
@@ -6,7 +6,7 @@ name: jd_live_rain
 on:
   workflow_dispatch:
   schedule:
-    - cron: '46 11,15,0-14/2 14-30 12 *' # 0,2,4,6,8,10,11,12,14,15
+    - cron: '46 11,15,0-14/2 19-30 1,2 *' # 0,2,4,6,8,10,11,12,14,15
   repository_dispatch:
     types: live_rain
 jobs:
@@ -33,9 +33,26 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【直播红包雨脚本】'
+      - name: '运行 【官方号直播红包雨】'
         run: |
-          node jd_live_redrain.js
+          node jd_live_redrain.js offical
+        env:
+          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
+      - name: '运行 【年货直播红包雨】'
+        run: |
+          node jd_live_redrain.js nian
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
