--- a/.github/workflows/jd_smallHome.yml
+++ b/.github/workflows/jd_smallHome.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: Tersd07/JDScripts 
+          repository: Tersd07/JDScripts
+          ref: main
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
