--- a/.github/workflows/jd_dreamFactory.yml
+++ b/.github/workflows/jd_dreamFactory.yml
@@ -52,8 +52,10 @@ jobs:
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
           DREAM_FACTORY_SHARE_CODES: ${{ secrets.DREAM_FACTORY_SHARE_CODES }}
+          DREAMFACTORY_FORBID_ACCOUNT: ${{ secrets.DREAMFACTORY_FORBID_ACCOUNT }}
       - name: '运行 【京喜工厂参团脚本】'
         run: |
           node jd_dreamFactory_tuan.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          DREAMFACTORY_FORBID_ACCOUNT: ${{ secrets.DREAMFACTORY_FORBID_ACCOUNT }}
