--- a/.github/workflows/jd_joy.yml
+++ b/.github/workflows/jd_joy.yml
@@ -53,3 +53,4 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
+          JOY_RUN_NOTIFY: ${{ secrets.JOY_RUN_NOTIFY }}
