--- a/.github/workflows/jd_superMarket.yml
+++ b/.github/workflows/jd_superMarket.yml
@@ -55,3 +55,4 @@ jobs:
           jdBusinessCircleJump: ${{ secrets.BUSINESS_CIRCLE_JUMP }}
           SUPERMARKET_SHARECODES: ${{ secrets.SUPERMARKET_SHARECODES }}
           SUPERMARKET_LOTTERY: ${{ secrets.SUPERMARKET_LOTTERY }}
+          JOIN_PK_TEAM: ${{ secrets.JOIN_PK_TEAM }}
