--- a/.github/workflows/jd_cash.yml
+++ b/.github/workflows/jd_cash.yml
@@ -1,14 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name:jd_cash
+name: jd_cash
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '2 0 * * *'
+    - cron: '2 0 * * *'
+  watch:
+    types: started
   repository_dispatch:
-    types: jd_cash
+    types: cash
 jobs:
   build:
 
@@ -19,7 +21,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: gwl410716154/JDScripts01
-          ref: main
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -34,22 +35,18 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【京东领现金】'
+      - name: '运行 【京东领现金】】'
         run: |
           node jd_cash.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          QQ_SKEY: ${{ secrets.QQ_SKEY }}
-          QQ_MODE: ${{ secrets.QQ_MODE }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          JXNCTOKENS: ${{ secrets.JXNCTOKENS }}
-          CFD_NOTIFY_CONTROL: ${{ secrets.CFD_NOTIFY_CONTROL }}
+          JD_818_SHAREID_NOTIFY: ${{ secrets.JD_818_SHAREID_NOTIFY }}
