--- a/.github/workflows/jd_nian_sign.yml
+++ b/.github/workflows/jd_nian_sign.yml
@@ -74,9 +74,7 @@ jobs:
           JDNIAN_SHARECODES: ${{ secrets.JDNIAN_SHARECODES }}
       - name: '运行 【京东手机年终奖脚本】'
         run: |
-          curl -O https://raw.githubusercontent.com/Tersd07/st1/test/jd_festival.js > /dev/null 2>&1
-          sed -ri -e "s/\(([\`\"\'])(\\\x47\\\x49\\\x54\\\x48\\\x55\\\x42|GI.HUB)\\1\)/('GxIxTxHxUxB')/g"\
-            -e "s/const inviteCodes =/& ['09002ed9-8622-4c47-99e2-956181562bc6'];/g"\
+          sed -ri -e "s/const inviteCodes =/& ['09002ed9-8622-4c47-99e2-956181562bc6'];/g"\
             -e "s/const randomCount =/&3;/g" jd_festival.js
           node jd_festival.js
         env:
@@ -93,4 +91,22 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-
+      - name: '运行 【超级盒子脚本】'
+        run: |
+          sed -ri -e "s/const inviteCodes =/& ['dDHbp8VGUqeUWEzNLPknTQ'];/g"\
+            -e "s/const randomCount =/&3;/g" jd_super_box.js
+          node jd_super_box.js
+        env:
+          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
