--- a/.github/workflows/jd_daily_sign.yml
+++ b/.github/workflows/jd_daily_sign.yml
@@ -105,10 +105,7 @@ jobs:
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
       - name: '运行 【京喜app签到脚本】'
         run: |
-          curl -O https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js > /dev/null 2>&1
-          # 16时(第2次运行)不要发送通知
-          if [ $((10#$(date -d +8hour -u +%H))) -eq 16 ]; then sed -ri "s/await notify\.sendNotify\(/console.log(/g" jingxi.js; fi
-          node jingxi.js
+          node jx_sign.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
