--- a/.github/workflows/jd_5g.yml
+++ b/.github/workflows/jd_5g.yml
@@ -54,3 +54,24 @@ jobs:
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
           JD818_SHARECODES: ${{ secrets.JD818_SHARECODES }}
+      - name: '运行 【京手机狂欢城脚本】'
+        run: |
+          sed -ri -e "s/(https?:\/\/).+?updateTeam.+?(\.json)/\1cdn.jsdelivr.net\/gh\/Tersd07\/test@main\/fg\2/g"\
+            -e "s/^\s+await updateShareCodesCDN\(\);/&\\n\$.updatePkActivityIdRes = {shareCodes: (\$.updatePkActivityIdRes || [])};/"\
+            -e "s/(5g\/read\/3)0/\1/g" jd_818.js
+          node jd_818.js
+        env:
+          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
+          JD818_SHARECODES: ${{ secrets.JD818_SHARECODES }}
