--- a/.github/workflows/jd_daily_sign.yml
+++ b/.github/workflows/jd_daily_sign.yml
@@ -251,3 +251,24 @@ jobs:
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
           JDGLOBAL_SHARECODES: ${{ secrets.JDGLOBAL_SHARECODES }}
+      - name: '运行 【百变大咖秀脚本】'
+        run: |
+          curl -O https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_entertainment.js > /dev/null 2>&1
+          sed -ri -e "s/let helpAuthor = true/let helpAuthor = false/g"\
+            -e "s/('pt_key': )\\$\.UserName/\1'jd_' + Buffer.from(\$.UserName.repeat(3)).toString('hex').slice(0, 13).toLowerCase()/g"\
+            -e "s/await notify\.sendNotify/if((new Date().getUTCHours() + 8) % 24 > 6) &/g" jd_entertainment.js
+          node jd_entertainment.js
+        env:
+          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
