--- a/.github/workflows/jd_crazy_joy_coin.yml
+++ b/.github/workflows/jd_crazy_joy_coin.yml
@@ -6,7 +6,7 @@ name: 疯狂的joy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 7 * * *'
+    - cron: '10 */4 * * *'
   repository_dispatch:
     types: 疯狂的joy
 jobs:
