--- a/.github/workflows/jd_mlyjy.yml
+++ b/.github/workflows/jd_mlyjy.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: Tersd07/JDScripts
-          ref: main
+          repository: Tersd07/st1
+          ref: master
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -36,11 +36,7 @@ jobs:
           npm install
       - name: '运行 【美丽颜究院脚本】'
         run: |
-          curl -O https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_mlyjy.js > /dev/null 2>&1
-          sed -ri -e "s/let helpAuthor = true/let helpAuthor = false/g"\
-            -e "s/\(new Date\)\.getHours\(\)/((new Date().getUTCHours() + 8) % 24)/g"\
-            -e "s/\(([\`\"\'])(\\\x47\\\x49\\\x54\\\x48\\\x55\\\x42|GI.HUB)\\1\)/('GxIxTxHxUxB')/g" jd_mlyjy.js
-          node jd_mlyjy.js
+          node jd_beauty.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
