--- a/.github/workflows/jd_speed_sign.yml
+++ b/.github/workflows/jd_speed_sign.yml
@@ -1,14 +1,14 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jd_jdzz
+name: jd_speed_sign
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '12 3 * * *'
+    - cron: '12 22 * * *'
   repository_dispatch:
-    types: jdzz
+    types: speed_sign
 jobs:
   build:
 
@@ -18,8 +18,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: Tersd07/JDScripts
-          ref: main
+          repository: Tersd07/st1
+          ref: master
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -34,9 +34,9 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 【京东赚赚脚本】'
+      - name: '运行 【极速版红包脚本】'
         run: |
-          node jd_jdzz.js
+          node jd_speed_redpocke.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
@@ -51,4 +51,20 @@ jobs:
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
           IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-          JDZZ_SHARECODES: ${{ secrets.JDZZ_SHARECODES }}
+      - name: '运行 【极速版签到+赚现金任务脚本】'
+        run: |
+          node jd_speed_sign.js
+        env:
+          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_USER_AGENT: ${{ secrets.JD_USER_AGENT }}
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
