--- a/.github/workflows/jd_ms.yaml
+++ b/.github/workflows/jd_ms.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: gwl410716154/JDScripts01
-          ref: master
+          ref: main
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
