--- a/.github/workflows/jd_gyec.yml
+++ b/.github/workflows/jd_gyec.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: Tersd07/JDScripts
+          repository: halloayou/JDScripts
           ref: main
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
